--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.30.3",
     "react-swiper": "^0.1.5",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.2",
